
2009-05-07  Murray Cumming  <murrayc@murrayc.com>

	Pass some sharedptr&s as const.

	* glom/utility_widgets/flowtable_dnd.h: on_dnd_add_layout_item()
	* glom/mode_data/flowtablewithfields.[h|cc]: on_dnd_add_layout_item(), 
	on_entry_edited(), on_entry_open_details_requested(), 
	on_dnd_add_layout_item(): Pass the sharedptr& as const.
	
1.8.8:

2009-04-14  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/calendar/glomcalendar.[h|cc]:
	* glom/utility_widgets/calendar/glomgtkcalendar.[h|c]: Check for GTK+ 2.14, 
	not GTK+ 2.16, because the GtkCalendar details_func API is in 2.14.
	Correct a typedef to fix the build in that case.

1.8.7:

2009-02-24  Armin Burgmeier  <armin@openismus.com>

	* glom/mode_data/flowtablewithfields.cc (add_field_at_position): Don't
	leak the Gtk::EventBox.

2009-02-24  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/flowtable.cc: on_size_allocate(): Change an 
	accidental += to the = that it should be, to stop columns getting 
	increasingly large amounts of extra width when there are >2 columns.
	Bug #539369 (maximiliano)

2009-02-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/glomconversions.cc:
	get_text_for_gda_value(), parse_value(): Use std::setprecision() to 
	avoid showing the awkward scientific e notation, raising the limit 
	from 7 digits to 15. We don't know how to avoid it always.
	Noticed by Arq. Maximiliano Meilán.

1.8.6:

2009-02-06  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc: get_table_names_from_database(): Comment out the 
	checks for internal tables, because that is now fixed in libgda.
	* glom/mode_data/box_data.[h|cc]:
	* glom/base_db_table_data.[h|cc]: Move refresh_related_fields() 
	(which is virtual) and get_related_fields() down the hierarchy so that 
	the override is also used by DbAddDel, so related fields are updated 
	in the view on list views and related records.
	This really fixes bug #569722 (Johannes Schmid)
